# blog-animations

./: .gitignore  README.md  pyproject.toml  render.py
animations/cnn/configs/: convolution.toml  convolution_card.toml  convolution_overview.toml
animations/cnn/src/: convolution.py  convolution_card.py  util.py
